[gd_scene load_steps=6 format=3 uid="uid://dars84ao0d5wf"]

[ext_resource type="Texture2D" uid="uid://c5qduwkhv4ffn" path="res://assets/lettera/background_scrivania.jpg" id="1_6p0ea"]
[ext_resource type="Script" uid="uid://nn04tfs3rfkf" path="res://scripts/letterainiziale.gd" id="1_71mrb"]
[ext_resource type="Texture2D" uid="uid://b1wgkfmof4j5y" path="res://assets/lettera/Adobe Express - file.png" id="1_yw22t"]
[ext_resource type="Script" uid="uid://cw7chrnd4s6gj" path="res://scripts/testo_lettera.gd" id="2_1r8ds"]
[ext_resource type="FontFile" uid="uid://l0nqfp87alnk" path="res://assets/fonts/PressStart2P-Regular.ttf" id="2_6p0ea"]

[node name="letteraIniziale" type="CanvasLayer"]
script = ExtResource("1_71mrb")

[node name="SfondoScrivania" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 853.0
texture = ExtResource("1_6p0ea")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 228.0
offset_top = 43.0
offset_right = -185.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yw22t")
expand_mode = 2

[node name="TestoLettera" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 163.0
offset_top = 35.0
offset_right = 570.0
offset_bottom = 219.0
theme_override_colors/default_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/selection_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_fonts/normal_font = ExtResource("2_6p0ea")
bbcode_enabled = true
autowrap_mode = 2
script = ExtResource("2_1r8ds")
testo_completo = "Caro figlio,è arrivato il momento di affrontare questa nuova avventura fuori casa. Vivere da solo ti darà tanta libertà, ma anche tante responsabilità.Ricorda: dovrai organizzare bene le tue giornate, alternando lo studio al relax. Se studi troppo, rischi lo stress... ma se ti svaghi troppo, gli esami ti travolgono!Tieniti d'occhio: avrai tre barre importanti da gestire — studio, salute mentale e soldi.Ogni settimana ti manderemo qualche soldo, ma dovrai farli bastare.Siamo fieri di te. Fai del tuo meglio, ma non dimenticare di volerti bene!Con tanto affetto,  Mamma e Papà"

[node name="LabelAvvio" type="Label" parent="."]
offset_left = 728.0
offset_top = 608.0
offset_right = 1128.0
offset_bottom = 631.0
theme_override_fonts/font = ExtResource("2_6p0ea")
text = "Premi SPAZIO per iniziare"
horizontal_alignment = 2

[node name="TimerLampeggio" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="TimerLampeggio" to="." method="_on_timer_lampeggio_timeout"]
